--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "registro",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://valenzuela182.github.io/registro",
+  "homepage": "https://valenzuela182.github.io/registro",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
